--- a/UcasProjectManagement/UcasProWindowsForm/Forms/ProjectProfileForm/FrmProjectManage.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/ProjectProfileForm/FrmProjectManage.resx
@@ -133,6 +133,96 @@
         AvLGLYImAPaECZjSB56hKtx0sdEUAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="gridViewCommandColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAlGSURBVFhHzZcHUJRnHsa9FpOoMToxiefkZnK5cSxnjMSo
+        IEiVIoiw1IWluSBLWaQtLCy4LL13ARUsKLGAohKPWCdGjRo9NYo0FawIuNRlaZI8938/RGPNzN3czb0z
+        z3zfvt/s/p5/ed/323H/T+N3T/T73xAbr5p/k8Z++7WDPfwj6S3S+Bf09hv0ziv07gtic+x3/0B6pQkO
+        HhBbEhcszxkJTtqOIJKxtRiLlznDRiBFWv5upObtQnLO10jMKkNcxnYo0rZBnrwFUQnFiIzbCKliAyTy
+        Qkii19N3wmBuFwALOzFdxb+YWvmUEYOZYNl4aTADbwXJs0f2HbuEyhOXcfC7nzi4gZkdBF4xaO4aQXPn
+        YzR1DqOpYxi3lEO4+WgQN9sH0NjWj8aHajQ87EPd3R5cvfkIPDKQXbQXmYXlSC/YgxW2/r8Qg2WDZeGl
+        wVy9vTZ+KyqOXkLmtsNIKf4HFus4Q9/UFk6e6whMcAbuGCL4IG60k9oI3tqPLxYZYwFJY5EJyRiX6tuw
+        yjEY7r7xcBEpECYvgJmNH4gxkfR6A2JFCcq/vQhFfiWSN32DRTp86JnYwN498rmoGbyR4A1c1GpoLDaB
+        pi4fmnp8WNgH4nxtK8xtxXD1iYPAOwYhVBITax9mYBLptQbe8ZNvxM7q84jJrUDyxoP4SpsPXRMebFzC
+        cPMpfDRqBq5vUaP2ngoaS0yxVF8AHUMXmPH8ce56K0ysfMhALJy85AiS5cKYPhPjzQZ8ooqwo+oHROfs
+        QWLBASzUdsQyYx5W8UOeRU3weoLXtfSh5k43LjcqoaG5ArrGbpQtdxhbinC2phWGFl5wFcWCT+UTh2dj
+        uaU3M/Aeia20lwYz8K53xHpsqzyNyIydiM/fh4VaDlhmZE2dvJbAA6gneB1FXXO3F5dvKHGhrg3nKVoN
+        TXMYmHrA0NwTBiuEOH21Bbr0WeAdC8fV0fCXZMDIYg0zMJn0SgMsLROEYTkoqTiJiNQyxOZV4Mul9tA2
+        XAVTa19cv9+HK01duNDQztX4HEXJdLamhQxYQI+AuqbulDF3zoD2cheu/vYeURAFp8HA3Ou3DXiEZGLD
+        7uMISy5FbO5ufKlJBgwsYbRyDUU6Gi2r7zmCsjQz+Jlro2LQ01ce4BRdT9FVy8CZ6h8DO3cZvAJToGcm
+        ZAbeJ73WwETXtako+PoIQuK3ICZrF3WuPxZo2kHbyPVZhCZu0DF2hQ5FqG3kgqWGAmgZOkHTgKRPopWw
+        RM8R+lQKvlAOG1cphP5J1MwezMAU0p8Y8MXBGRD4JyNvWzUCFcWISNkOWVoZZKk76L4UEUlbEU4KI3Oh
+        cSUIji1GUEwxfEKz4EbLjcmVas7SHpNUjIy8HUjJ2oaEtBJk5pdBGp3JDHxMYlv7S9sxMzDJ0TseGcVV
+        EK/bAHF0EfyjCuHHFLkeImpQH2k+vMPzsCYsF16hOfAMyeJqbOcmg61rBCcblwgkZW5FzFYzKCo+R3zl
+        fCQe/BxxdI0onXuSOGwzYk3/3OAM2AtjkFq0H36yAvgSlAFFHDQXayQEleTAKyQbQgILgzMg8E0gaCSl
+        eRTMc5HC2jkcCaklWLdzHoZ/7nimESUU5fPGysB4zw028R7PLQqJeeUQUZSjUAJKsgnKgJkQBmXAIygd
+        HoFpcAtIpcgJTgeVNYnnzOBSWDmFQZG8EbIdf4f6cQOautejqacQ7f3fQr6LM/ABiTXic2VgE5MtBRGI
+        pebzCs3m0utOTekakAxX6g0Xv0QuYmefBDiJ4uBAO5yNG0VNTWYlCMcq5zCscgrFSscQyBMKId02F6rh
+        WtzoziZloVV9kDNFHNYH7Bhnzci4XDY4AxZ8CaLTtmM1F2U6BAQdGH6M/sFRqUl9A8NQDTyGqn8IPX2D
+        6FUPorNbhTZlJx62KnGvpQ2Nt+5Asnkuegav4royGdc7knFPVQ7p1rnMwF9JH5KmMiaJnZCcgffN7IIQ
+        kbgFbmKKXJwCvnccB+5VD6NHPYRuAnarBtFF6uwdhLK7H486VZBtsIIweSZEGbPgnzsbAQVzELRhDjoH
+        L+Jym5xTU3cpQjax+dlYu34O/HNmQ5Q5C67xn115asDYOgChsZtG0+2TCAdPORc1g/f0kQEG5jSAjp4B
+        POIM9OJS7UVEFJlA2VeDvuHbUA83o5+uyv4zOPsgFOdIdcoCtKtPQjV0A71DjWjt/ScCMucPaK6apjVm
+        YIqBpS+C6EByouXI94qDjXsUl/JugnepmEYj7+h9ZqC1Q4WWtg6UH9mEjHI7fN8cjqO31uB4kwgnmkm3
+        fUZF92zuyC0vHL3pB9lmbRi6fSQhLisDZ2Cq3oo18JfmwkGoAFuSVtTdrNbdDP4rsLKHImfRMwOdarS0
+        d6P53kPElazG7jMB2FvjgIoaGxyo4+NQowCHGgR078jNlV+zRX61Bcx8Zxwm5jQS25i4jpyqYyKEiHY2
+        W491FH00LPmh6O0f5tLewWpOBpTdT1Lf1Y92Uhsz8EiFB21dqKlvpLTqoeqnAJT8aIhN53VR/KM+is/r
+        0VWP5oxQepYHq+AZrdNnTpxFzAkkbhVwBpYaucNzbRotLRmsXWRYYReI7BPNkFc1IPpAPWQH6hBRWYew
+        vbWQVNQieE8tAnddR0DZNYjLriK9qgZRm7dDkq+P8qtOyDulhbzTY9JE6QVLrFTM/nnB8imOxGOpZ1xu
+        P+CacM58lxF33yRa01Ja01IY88TIP9OKhGP3EXfkPhSH72Fd9V1EHbqLiG/uIPzgbUj230ZwZTMCy28h
+        fN8NZFfXQ5wtQXoFD4U/6CP9xBdIO7EABaeXIahQA4t504qINZb6p5sR25snzF/CS5szlz+ykN4FF+o4
+        Ygm9Zglzz8E2/jtYK45jZfRRmEcehml4NYxCD0E/qAo64v3Q8qvEYlE5vvLcA2vpAYgSKuEQZoBNx+2R
+        clQDKccWILZiCZY6fnBt/PhxnzLWE+ZTA+yGpYM9YHs1c8jENowX9dErxHY3pumkGaS/fTJnkiU/eKa6
+        8HtTpB5eBF3+J+o/z55gSM/GXkqe24rZBybWEOwhM8P+RPw7YqllJ97Hi1ZOD1ybqQWe5FPM1J4cTHPs
+        HGDPXzoNx8aYkf9E7MdZIOzv2IeGrn/ZM2/5lL10zzLFzoDnUv/fGmNGGJClnOl/Bh8bv84G02vg48b9
+        Cx79nU/VgfMyAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="gridViewCommandColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAjWSURBVFhHzZd3VFRnGofdzWbTjSbGJJZYYkBQRAVU2sDQ
+        BoFRkKgk9pW1Kx4DK2ABVNToGgXE3qMGRaSIYCEqvSllQBiKKH2GIiIDSP757fveYVAkZs/Zs3vOfuc8
+        fvcyw31+7/vd73Lt9/82/vRv+PN/Ab7O7w6N4C/E28RfX+OdN/DuH/DeK/A5f5+vz55eg+Vv5fh525Tu
+        3JJdscsfFbv88IjZ6YdyJpDYsZXYgjIN2zejZJuGTSgJ8IWc8fdFMePngyI/b8IXRVu9kbPpHw9ueayW
+        kIsL7NUJPnlb7rdF0Zp1B12Vheh6UoCuxzJ0VeSh61EuOsseoLM0G53Fmeh4mIaOwhR05CehPfce2nN+
+        hSr7FlSZ8WhLu4625Bi0Jl5F691wtCaEofXmBTyLP4e6MweQ5e2pJBd3o1cX+OSdUkranpuAZ9fP4Vns
+        S1qunUVLzBm0RBNRp9Fy9RSeRpxAc/hxNF8+iuawI2j+5RCaLoSg6ecgNJ7dj4bT+9Bwci+Ux3dDcSQQ
+        ikPbUfNPH+R6rge5PiDeYrFmcIB35b5eaEuNJtFJEnUTeRJPrxIRx/H0CgnDj/VIm1h6MRSN50PQSOKG
+        M2qxUiM+uksQ1x8MQF2QH6p3/oDsdas5wIdE3wAPvdbjeWI4SUggQJVdJi4dRlMYIQgPofGCRhqMhrMH
+        SEriUyQ+sReKYz9SxTtRHxpI4m2oC/ZH3YEtqN3niyfb1iFjxXIO8BHRJ8B7Mo81tGYXSUKt1EBtbTwf
+        rIbbe46E1GLl6Z+oxWqp8vgedbWHWbwddSEkDmLxVhJvQu1eb1Tv9sLjzSuRunQpB+hP9Anw/n33JWiJ
+        O0cCWr+zJGB4LYmqg4G47iLFOUMj3HZzRd2hnSSlNpO0JngbbrjOwInxExApsUZFoBdqSFzN4h+9ULXL
+        E5U71uORtzvuzJ6rCcDbsWdwmvdTnJ2pMqrmGFVznFp5ggTHdqMqKABREltEeG1FfHQywpetxTWpPaqp
+        ymqqMmq6LS65r0ZcVBIue/jgF1NjlPt5oIrWvHLHBlRS6x/7rUHxMlfEiiUc4GOiT4APkqQzUbNnAyo8
+        Fwp3bB3dQEy8ixOifAKQkl2O8scNKC6rR8QKD8Q4SBAz3Y7ka3AvXY7i8nqUPG5EFAWNtLbEk4B1eELi
+        io3uKFk+C/lzbRBtbsUBBhB9Anx4z1FKqdehbJUryla6ovyHBajc7oFLJiaor1KgoroZLc+70NL2AiWP
+        FEKIS39fi7tpcsgpWNPzF2hq7cRTZTNO6enT7y8msSuKl0hRvMgJebPFiDQVc4CBRN8Av06X0p26CqXL
+        nVGyTIMLElydkLp5Czpf/EYBXqC5lUQ0yx8pkZFTAXlFAxqfdQrwd+55bUSsvTWKSFq0wBEPFzrg4XwH
+        5DiLcGWa6I0BProtcULF5mWQu0uJGShm/iZFuecS3HCyR7q/vyAQZFQpzw2v0Nn5G5J9fRFlJUKpx3xB
+        WjjfHoXf26HgewnuO5ng8hQhwCcEP457Bgfof9PWge7UJdQyRxQt7mYRz04o81yM6xIrJPr4QtnSDiUJ
+        lS0dPdQ3qXB3ow+iLMxQun4hSSUocJNA5mYLGa19/hxrZE2fhjADUw7wKdErALejf5yVBKUbOLkEhQso
+        +TwJHU8n7FFA83UbESKXr0VhqRLKZgrQ3AEFUUfUNqoQu2o9okTGyJtjAxkJZd9aI99VLJA3ywIZtka4
+        MOnNAT6OtbSFfI0bCr6zpZZR29xshGOuINbSGFdp+yUkFaOgTIm6JpIKqAR5bWMH8uX1CF+6CleNDZDj
+        Yok8FwvkMs7myJlpjlTxJPysb8wBBhG9/iJygAExIhsU03aR0d2aP4eYbUWIcdPGDJEr1uF2UhFkVL1a
+        qEJ7RxdURE2DCtXd5BXVIsJ9FaJNDZEjJbGTKR4wjiZIFunjrN5UDvAZ0TcAb5EC2jJ5s0TIJfJc1HOk
+        yBTlpdXIL6kXZDUkV7V3ITPADxn+fsJxlVIlUKloQ22VEhcNJuO+g7EaWvtsyVQkmo3DKR1DDjCY6BNg
+        YISxGDJa6wczTKllhNRMqOCWgw0KD4eiVdVFrW8XhNnbAhBvZ4k4WwshSBv9jLvC38kLDsI1SzOSTkGW
+        3RRk0tpn2hjizjRdnNCarAnAb1m9AnzCWyR3rjWlniakfsAzVSBbOANxJOMQHQoFsgP8ccNejMJFM1FI
+        n8VzCP+taFfUIy8kmG5EE+S4OQjSDOvJyLBiJiHBUBvHxkzkAJ8TvQJwOz4NM+SbRYQsiZEaOyOqwkgI
+        I1swEwmONogRm+OO1A75853UlRH58xxx28EKV+hvQBztlNzvHAV5usUkZFhMRLqlPtJo/W9PHIMjo/Q5
+        wBdE3wAXJpsiix4WmZQ609pASM/HXEEmtVI2j55oS13pmS5BZndVAuLJ9Ji1ReFiZ/qMHliWBkgXTSDp
+        BKSaMnpIpfW/oTcaoSP1OMCXRJ8Ag87rT0Mm3SzpYkrNUPKemasQKpmINAuaLUhgTj9nkRkf6yFNEI1H
+        qokeUozHvYTWPmWqDuLHj8DB4bp9AvA/HOAz3iLpVBFfLJUumiqiiwrHdFEzms15JkiUQnOKCcECU7Uo
+        mSFZsrEOkkmYPHUskqdoI2nKWCQaaSNWZziCh4zlAEMIfkXvFWDQKV1DoW0pprpUBaV+hWSeuZJuegRT
+        6VwQjSWRWpZEMibRSAuJBt/0cE17GA58ofW7HRC2YajWJEW0njZu6o9GvN4oYiTixo14ie5XArHCufpY
+        OGeoOgGSxI4ltIeSsButIcRQhI0cjsCBY/i1nB9EvQIIr2SbhmnPCx4xvvHo1/pgjoyeQHetHg6NHC8Q
+        OmKcwMGvdBEyfBxChukgZCgxRIdaS3ypjSDiALGfKt3/OTFYCz8NHoN9g7/BnkGjmlYOGLqQXJqXUiEA
+        D00X+H2d/1DwPuWtwq16HV6/1xn6Boa9Ap/zA4jfB3nJe+Q8+ETTCf6Q2/M6r/5/8D9Bcx1N5b0CaIbm
+        g/813aNfv38BVNoUikq/bLoAAAAASUVORK5CYII=
+</value>
+  </data>
   <metadata name="ProjectbindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>375, 17</value>
   </metadata>
