ترتيب قاعدة البيانات

--- a/UcasProjectManagement/UcasProWindowsForm/Forms/supplierForm/FrmManagementTheDonors.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/supplierForm/FrmManagementTheDonors.resx
@@ -127,8 +127,8 @@
         AvLGLYImAPaECZjSB56hKtx0sdEUAAAAAElFTkSuQmCC
 </value>
   </data>
-  <metadata name="thefinancierBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
+  <metadata name="theDonorsBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>577, 17</value>
   </metadata>
   <metadata name="office2013LightTheme1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>212, 17</value>
