--- a/UcasProjectManagement/UcasProWindowsForm/Forms/ExpensesForm/FrmSalariesManage.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/ExpensesForm/FrmSalariesManage.resx
@@ -117,16 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="projectProfileBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>920, 17</value>
-  </metadata>
-  <metadata name="groupsTbBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>554, 17</value>
-  </metadata>
-  <metadata name="employeeBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>736, 17</value>
-  </metadata>
   <metadata name="telerikMetroTheme1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 56</value>
+    <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="radRibbonBar1.StartButtonImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEkAAAAaCAYAAAD7aXGFAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIhSURBVFhH7ZjPahNRFMaz6k4KilIRhIIgFIQ+QBcuBR/A
+        ldCVKxcufQNXxULBlSAIhYLgSuiq0JVPkIUgKC5Eo6gpJmbyd/x9M19CZxxtxlV6e39wObnfOSeZ++Xe
+        TJJGJBKJnAbSNF2ZTCbnPY1gxhXG/fF4vJ8kyRcMKtDv9z+Re8XDe4wVt50dWPxB5kQJjPnc6/W+e1rA
+        hq37KcJHix4MBh9Z+B676Q7jklMz0C4z7lLzQuapRzB/jn7RZeHCQrdY75KnJ0LtMj07nU7np4zC4A8Y
+        dcPpyHEwZhWzdOxSGcb8llORMjpyMqrdbv8ibFiOlMGoZzJKd0HC2bv7zQtGvZRRxF1L4cH61rnl/yBu
+        WiogfTgcvifetFQA/SqjzRAL//WAazzMLzWHN3ffqWqo2cxLZxSM0jyXZ1QayQvtKEk8sLSwcKNZazab
+        I11vq9XqM7/m1J+QfKBCweKyzxaTGaGYT6vzx0FbYre9UZLnvW55YWE9T3StxC1L1VBTOGaKahR/M831
+        lUeKnqdZdZo+tLTQ8Ka+9cN6sMC5jlcV7KDb7jm0FCalHZTtKKdOBJMuqIfd9s1SeEwNmh5Bx1pGdbvd
+        I/XAsqVwKBmUfeYo1jWKc/5O9eyqVUvhEE2ak5JR/3XckiT5qh5MCvdvlKlRU+oYhDHn1KN/BiyFC8Y8
+        rmuQoGVDfaPR6LWlsGGtlb/T/gWmbssk4iNLp5xG4zctIgwnzMhqbAAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
