--- a/UcasProjectManagement/UcasProWindowsForm/Forms/ExpensesForm/FrmManageExpenses.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/ExpensesForm/FrmManageExpenses.resx
@@ -136,4 +136,64 @@
         Ya2Vv9P+BaZuyyTiI0unnEbjNy0iDCfMyGpsAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="gridViewCommandColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABQxJREFUSEu9lW1sU1UYxyufCX7TxJCYqF8UTfzgF0gmITNDRFSUEWAiifEF/SIJ
+        RoVgUQmYGKLLKMhGgACDbey92ygSKC2Drdu6ru3Wt/WFtV1fbu/t2r21ty+nf59711GxaKKJ/pNfzs29
+        5/yfc57nnnMU/6sKhcJexlhfEfU/QEP0AKguWpWLzKsymUyEOv1r5XI5NzXPFC1LyhcK++ijL19Y6sgK
+        BdA7AsgzCXr+O6ivNFTqTys5XrQtSWSsftm8azKO6k4HPuhxoabbhe0dTmxts2NLqx1vXLWV8XqLDRWX
+        LGhzCvL4NGMtRduSxBxTBcJRmgvgjKfRQUHU7hl0E52uONqJVkccVx1CGS3E5QkeDiENWgjSWXa5aFtS
+        igJMTUdZjtJh41NkJqCjaCyb2AU023hcfgSNxHlrTB4nZWExyxqLtiXNZpjKRwGkJXbS7KX0fKrx4KNr
+        HuzpmUSNehI7ulzYRun6M++2O7GR0tTuWkrRQvpRAUSmcvkjLCkyxFJ5eJMZ+Aip9SREGbfETDmTUpvI
+        YCZdAE9jyeNs0bakeIqpHBSA/GnZMbxDRd3R5UQ1zVB63kzF3Ngygcor5axvHEdVswN9IRGWJKCeYtrD
+        wIqi9ZJiFMB6P8yii4xmnYUxkpIZJUYiixgmhiTCD2MgrPEcTt4042B9C+xpoC0InPOy+qL1kkILOZXZ
+        F2YCLVPjTeJwfwBH7wVxhFD2B3FIH8ABnR9faace4oc7ATSMcajRB6HYrcT+2jMIUx20CeCUee7S8QG+
+        5kEAkzfMuMUC+ryz+J5Mjw6E5ADf0fO3ZHRQF8A3FETigN4PJbGT0vd0ox2rfktghVqA4sNjUJ48B1oE
+        uici+Yu21HU5gH82pzJ4Qsw7m4OVF6ELLEAXnIc+uIDb/nkZLXFrag43iQH6ZgzN4/MhHqvUYTzeNY3n
+        tEms1MxAsUuJQ3UNMAgFpT5eWCcH8CVyqkFXiIXmGc6YqcjtdmynIr9HRX6LdvAm+g2rmifw2hUr1l9x
+        4KXzDqxpc2NldwhP9EbwilbAs9fCWNFLq2gYx4s7938tGy/Lk8io7jiCzC5kYY1lYAilMCiziAGJ6SVG
+        ohkMTfHYrhmHopXDU5ooKu8l8PItHgqq7qo2P77Q+XuKtiU54hmVzjHNPEmGsxYeu+gM2tPjwW61Gzs6
+        XfJK3m5zYkNbAD93dsB8tw6VA3GsNeRQ0U9paQ3gsSYvjhk5iCK7ULQtyUYBbtuCbJzPQuObw69jMTSY
+        eZwe43HKFINqlMMJkwDl3SgaLynpwDqBOD+GPZZ5KNoFPNk5hTqaWDCRpU2XLd/JVoECTATYGKWn1zsn
+        G0rGJ00c6oxR1A5HcMKWwqEmPT6u3oCY4Scg1AyT8QL9Rf1Y0ziJG+4kXDN5mLl0+WFn4sT6US6DcT5P
+        pjF5B+/smkQ1FXornTVvUpG3XI/hhfe/xOrVz2Pb5ldhbvoEbt0vONKrw/omN2qNMUwIOZij6fLj2i6I
+        +4yc6OsPpjEczsBIxZQKKrcREY5FQOcMY93aClRUbsJnylp0GSzoj+Zxh3aWhSY3TP30NN7CpcsvHEl2
+        IV11dzodMYRF2fiPSAG67lnx4+mLuOHkYKMjwUC7dTBawCiXhYkCDNK4ofCC25VMl1+Zy7Ly2b1DkVSf
+        hCGcUi8zwmXVWjenNgkp9X265G3zTD0SzT74boiImuFQqod+lr++9P8bKRS/Axksw3eRadqMAAAAAElF
+        TkSuQmCC
+</value>
+  </data>
+  <data name="gridViewCommandColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABhhJREFUSEuNVntMU3cYZW7K8In4io+pU6Ymi3uYmagzKibia7ox3KKyTKfO+WJq
+        TDaMOt9K3JQlTpcBOkV6qeILKLRSQEtBC4XSFkpLW0pbKiAvsYIy0Z2dW/ljTDT7ki+5vbe/c77vfN+5
+        rV93sXPnzkmq2/lQazTtmZmZXgUzTaHwCrI0ryAIXgnz97jYjgRB0iGTyWZ1Hvt/ER0dPTM2NlZiq3bD
+        2dQAi9sNo92GwtJSqLQFUKhu4Zo8A7+djUfmzRwUFhdjY2RkaOfxV8ZrUVFRg5RKpSYtOwsFJTqYXU6U
+        ElxnMUNjNECtLUSmOhcyPj8jSURGVhbE0PHZ7t27l3XivDySpNKalBsKJF5OhqakhNW7oLdaUGQqYwdG
+        5BcXITs/D1kkuXj9GuQ52T6CRx1PUMiCSLKyE6r7+CM+Pl2ach2S5GRfBxZ2YKq0w+yoZDpQarNCRzKR
+        PEUhhzJX5SPoYLbjb2j1euw9cGBNJ9yL8UtMzEaZUolzguDT1uqsgtFsho76600mZhm0Rj20BgNy8vJw
+        6/ZttD3twP1HbWh5/Aj3mpuRo1Zj7/792zohuwZbnHwtXYYLly6ioKAAVlZspDQ6Vqw36KE3GqHnZ32Z
+        SFjGLbuDdGUmxDOXU1OQRGn/FCSITUp6EBkZ6d8J2zXOS6WVSVevovDOHVjKylDOAZrZgZmgZoJaLBZY
+        rBUwsbMScS4FGmTnqZGepcQVWRqSrl2FkCJ4X0rwW3y89BK/VEQJKnQ66CmDNjcXRfSFjlukF1NXDCO7
+        KaFUWn4nv7AAOfn5JMrzrbGQkf5ygn3R0aukN26ggBWZeaBUpUIpdS3WalFKmeyUzcJhWs3lsNlsqLDb
+        UVZh6Ry+DnncNDmN2S1B7bxQxfap0zTSXFWrgVWb5HKUMPNYXWtqGoq+Xo2rZ+Lhqq1FOZfAzMFbrFaU
+        UzIjvaInaQnJRPe/QFC2cNEN91drcW78hGfb5oc+s7Biu1yBfG6V9cQJPFm+Eu7IHYidMhWyxAtwcHVN
+        7MjCWVTQjGaus6WqCjZPNTI1d7oSqGaH7LYuCkPtph3wbo3C8aHDsTVkDgx0agXBa+bMReW2H9FwIRl1
+        679HyvxF1F8PD73hJqin5i5qGhvgrKuFp7kJmuLirgQJ/YK2V362HM6wFXCv2QTv5h3YEBiEVVM+RNXi
+        JbCu2wzHwWPwbI/CAxZxKnQRrlyUwiluVLnJt852mvJuQwPu/9WOYhIsWLCgq0RHAwdtti34FLbF4XAs
+        Xw3bym9wcsx4GMNXwLZlBxyrv0NNeASOzwrBsWPRsHEGrvJyOCmPmy9GD6uvvd+MNrq6WwIx9vT0X18x
+        PQSmuQthomRuAuqXfoHSJeHwkDhmxiwc+mkPKmlCN9ezkj5wcYuqqbunrs5H0C4SWK3dE4ixc8zYRNWU
+        adB+9DE002ejcAZnMSMEP7wzCYf37UMVt6sy5yYs9IedPqjiFrlcLrg5h3stLXjyKgLnli2Ld01+D1eG
+        jsKt0cFQjnkH2cxc5oZ+/REdEYFmGqyOPvAw67g59QRuamrE/YdeNLW24qlIYLO9SGCOiFhm+GQpMkeN
+        Q/qQUUgdMhLKPkFIHTgMqSRUDx+L4/0G4NSaNahi5U6+nxx8hbhIUl39XKLG1oeEJ4H9PwTZYWHvq+fN
+        h3z4aFwnYAbBFb0DETNuAi73DYI8cChkw0Yhh/cP+fXA2V27UM+hVlOeu5SnRtSfXTS1iSMWCexdCQwz
+        Zv6cT3DZgCFQE6iCJMcnf4CY30/jytpvofDzg3rAYGQNewu3ewQgIXgCDDTYg8ZGNNbXo/lBC1/Zj9Dc
+        /rh7grCe/uvqKM09AjSy2oNjg/MyaHc0NuEJ29YfPgrP4BFwBw5BXZ+BSA//ErVtrT6w7oJD9wYHB3ed
+        wbzefdfi7YnY3yvgnF9AwMi406erpXFx1UJ8nOOEIDgOzg51tbz+Jn6dNOnexiNH7OcTEqoEicSRKEgc
+        /JfhSyFZcFxXKutPnjplJuTw58j8sWf2FC/eDQj4PMDPbwQvezP7i/cYrzPF66CJvXqF+/v7B/O6D7MX
+        Uwzx/L9TDPEMMfze+AdRAg79Jy9yBgAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
