--- a/UcasProjectManagement/UcasProWindowsForm/Forms/ExpensesForm/FrmSalariesManage.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/ExpensesForm/FrmSalariesManage.resx
@@ -136,4 +136,64 @@
         Ya2Vv9P+BaZuyyTiI0unnEbjNy0iDCfMyGpsAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="gridViewCommandColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABQxJREFUSEu9lVtsFFUYx1eeCb5pYkhM1BdFEx98gaQSUlNEREUpASqSGC/oiyQY
+        FYKLSsDEEG3KgrQECNDSlt6225ZFAnVLS9m223a77d663drudi+zM3vpZWdmL2f/fjPdsuKiiSb6T345
+        k5lz/t853zfnHM3/qlwut58x1pXH8A8wEh0AyvNWxSLzslQqFaJO/1qZTMZDzVN5y4KyudwB+jidzS13
+        ZLkc6B0BZJkCPf8d1FcZqvSnlZzM2xYkM1a9Yq6fjKK8zYn3OtyoaHdjZ6sL25sd2NbkwGvX7EW82mhH
+        yZUxNLsEdbzEWGPetiA5w3QLokxzAVxRCa0UxOCJoZ1oc0fRQjQ5o7jmFIpoJOomeDgFCbQQSGlWl7ct
+        SKQAiSWZZSgddl4kMwGteWPVxCGgwc6j7iHUEhdtEXWckoVkmtXmbQuaTzFdjAIoS2yj2Svp+dg4hQ+u
+        T2FfxyQqDJPYpXdjB6Xrz7zd4sJmSlOLezlFS9LDAshMx81LLEExImIW3kQK04TSTsVlFY9CrJhJpY2n
+        EJNy4GkseZzP2xYUFZkuRAGUNdTZI3iLirpL70I5zVB53krF3Nw4gdKrxWysHUdZgxNdARljCcAww7qP
+        Aqvy1suKUABfXGThJKNZp2EJiSrDxFAoiUFiQCH4IGbCFs3g9C0rDlc3wiEBzX7ggpdV562XFVjK6GZi
+        IhNomUZvAkd7fTh+149jhLbXjyM9PhwyzeKL7pkH+O6ODzWjHCp6/NDs1eJg5TkEqQ7dceCMdeHKyX6+
+        4n6AacoTl8yhyzuPb8n0eH9ADfANPX9NRodNPnxFQRQO9cxCS+ym9D1Z68CaX+JYZRCgef8EtKcvgBaB
+        dq+UvWwXb6gBZuczOpeQZN75DGy8DJNvCSb/Inr8S/h1dlGlm7g9s4BbRD99swQW8ekAjzWGIB7Vz+GZ
+        7gRWG2PQ7NHiSFUNzEJO2xPNbVADTMczOieXZIFFhnNWKnKLAzupyO9Qkd+gHbyFfsOyhgm8ctWGjVed
+        eOGiE+uaPVjdHsBjnSG81C3g6etBrOqkVdSM4/ndB79UjVc0FU/pbKFF5hDSsEVSMAdE3FNJol9hbpmh
+        cAoDMzx2GsehaeLwhDGM0rtxvHibh4aqu6Z5Fp+ZZjvytgU5oymdNbTEphIM58d47KEzaF/HFPYaPNjV
+        5lZX8mazC5uaffixrRXWviqU9kex3pxBSS+lpcmHR+q9OGHhIMvsUt62IDsFoJyycT4N4/QCfh6NoMbK
+        4+wojzMjEeiGOZwaEaDtC6P2ipYOrFOI8qPYN7YITYuAx9tmUEUT88fTtOnSxTvZJqR0g3MLbJTS0+ld
+        UA0V49MjHKosYVQOhnDKLuJIfQ8+LN+EiPkHINCAEcsl+ot6sa52Ejc9CbhjWVg5qfiwG+Hk6mEuhXE+
+        S6YRdQfv1k+inAq9nc6a16nI225E8Ny7n2Pt2mexY+vLsNZ/BI/pJxzrNGFjvQeVlggmhAysYan4uHYI
+        8gELJ0/3+iUMBlOwUDGVgqptSIYzCZhcQWxYX4KS0i34RFsJvXkMveEs7tDOGqPJDVK/Hho/xknFF44i
+        hyCV9c1JIXNQVo3/iBJAf9eG789exk0XBzsdCWbarffCOQxzaYxQgHs0biC45HEnpOIrc0U2Pr1/ICR2
+        KZiDomGFIS5t6PZwhhFBNPxGl7x9kRmGwun7380h2TgYEDvoZ/nrS/+/kUbzO8Q3xih3xt46AAAAAElF
+        TkSuQmCC
+</value>
+  </data>
+  <data name="gridViewCommandColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABiNJREFUSEuNVntMk3cUZQ9l+EQ2NT6mbqIzWdzDzESdUTHxhXsx3OJk2Zzu5YOp
+        cdkw6nwrcVOWKC4D3JxCKaAgUGhtgVkKWigtXwulpS2lLRWQl1hBmejOzlf5Y0w0u8lNvj5+59x77rm/
+        NmCg2LFjxwz1lVJotNoepUrpUyiVvlyFwpcmy/VJpKm+FInE90tiQq8kPa1XJpMt6Dv2/yI2NnZ+QkJC
+        ir3BA1d7K6weD0wOO8qrqqDWlUGhvowseT5O/pYE5Z9FKNfrsSE6emnf8cfGEzExMc+qVCptbmEByioN
+        sLhdqCK4wWqB1mSERlcOpaYYMn5+OiUZ+QUFEMPAz3bt2rWqD+fRkSqVNmZfUiD5fAa0lZWs3g3BZkWF
+        uZodmFCqr0BhaQkKSJJ2MQvyokI/we3euyhnQSRZ0wc1cPyalJQnzb6IlIwMfwdWdmCuc8DirGM6UWW3
+        wUAykTxbIYeqWO0n6GX24G/oBAF79u9f1wf3cPwUF7dBplLhjETi19bmqofJYoGB+gtmM7MaOpMAndGI
+        opISXL5yBd33enHjdjc679zG9Y4OFGk02LNv39Y+yP7BFmdm5clwLj0NZWVlsLFiE6UxsGLBKEAwmSDw
+        tVAtElbTZVeRp1JCPHM+JxuplPZ3SQpOp6bejI6ODuyD7R9/SKV1qZmZKL96FdbqatRwgBZ2YCGohaBW
+        qxVWWy3M7KxSnEuZFoUlGuQVqHBBlovUrExIstN9jyQ4mZQkTeeXKihBrcEAgTLoiotRwb0w0EWCmAY9
+        TOymklLp+J3S8jIUlZaSqMRv4/T8vEcT7I2N/VR66RLKWJGFB6rUalRRV71OhyrK5KBsVg7TZqmB3W5H
+        rcOB6lpr3/ANKKHT5FzMAQmalixVbJs9RystVncZWbVZLkcls4TVdeXkouKTtcg8nQR3UxNqaAILB2+1
+        2VBDyUzcFYGklSRTFqgeJqheEX7J8/F6nJk6/f63K8PvW1mxQ65AKV1lO34cd1evgSd6OxJmzYYs+Ryc
+        tK6ZHVk5i1ouo4V2ttbXw+5tQIH2an8C9cKwXbbwCDRt3A7flhgcGzMOW8IWwchNrSV446LFqNv6PVrP
+        ZaD5y2+QvSyc+gvwcjc8BPU2XkNjWytczU3wdrRDq9f3Jzg7PGRb3Xur4Yr4CJ51G+HbtB1fB4fg01mv
+        o37l27B9vgnOA0fh3RaDmywifmk4LqRJ4RIdVWP229nBpbzW2oobf/VAT4Lly5f3l+hI8LOb7MvfhX1l
+        JJyr18K+5jOcmDwVpsiPYN+8Hc61X6ExMgrHFoTh6NFY2DkDd00NXJTHw4vRy+qbbnSgm1utNxofJhBj
+        96DAL2vnhsG8eAXMlMxDQOGdD1D1diS8JI6btwAHf9iNOi6hh/as4x646aIG6u5tbvYT9JDAYLMNTCDG
+        jslTktWz5kD3xpvQzl2I8nmcxbwwfDdtBg7t3Yt6uquu6E9YuR8O7kE9XeR2u+HhHK53duLu4whcmzev
+        3DnzFVwYMxGXJ4VCNXkaCpnFzK+Hj0BsVBQ6uGDN3AMvs5nOaSFwe3sbbtzyob2rC/dIUGm3P0xgiYpa
+        ZXzrHSgnvoi80RORM3oCVENDkDNqLHJIqBk3BceGj0T8unWoZ+Uu3k9OXiFukjQ0PJCoresW4QHB8R+C
+        woiIVzVLlkE+bhIuEjCf4IohwYh7cTrODwuBPHgMZGMnoojvHwx4Er/t3IkWDrWB8lyjPI2i/uyivVsc
+        MTtwOPoTGOfN/7GU4LKRo6EhUC1Jjs18DXG/nMKF9V9AERAAzcjnUDD2eVx5MghnQ6fDyAW72daGtpYW
+        dNzs5JV9Gx09dwYmiBgU+HkzpblOgDZWe2BKaEk+7xO0teMu2xYOHYH3ufHwBI9G89BRyIv8EE3dXX6w
+        gYKS+UJDQ/vPYMmQYevxwkvYNzjoTEBQ0ITEU6capImJDZKkROdxicR5YOFSd+dTz+DnGTOubzh82PHH
+        2bP1kpQUZ7Ikxcl/Gf6UZEicF1WqlhPx8RZCjnuAzB975iDx4eWgoPeDAgLG83EIc4T4HuMppvgc8tLg
+        wZGBgYGhfB7KHMwUQzz/7xRDPEOMgKf/AcTND0XqdkVIAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
